<resources>
    <string name="app_name">ramani</string>
    <string name="enable_location_updates">Enable location updates</string>
    <string name="map_menu">Map Menu</string>
    <string name="renderMode">Render Mode Normal - Compass</string>
    <string name="cameraMode">Camera Mode Follow</string>
    <string name="renderMode_normal">Normal</string>
    <string name="renderMode_compass">Compass</string>
    <string name="renderMode_title">Render Mode</string>
    <string name="north_up">North UP</string>
    <string name="map_orientation_north_up">Map Orientation:\nNorth UP</string>
    <string name="follow_off">Off</string>
    <string name="follow_Gps">Gps</string>
    <string name="follow_Gps_north">Gps North</string>
    <string name="follow_title">Follow</string>
    <string name="save_locations">Save locations</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_before">Before</string>
    <string name="delete_after">After</string>
    <string name="set_locations_starttime">Set Starttime</string>
    <string name="reset_locations">Reset locations</string>
    <string name="remove_all_tracks">Remove all tracks</string>
    <string name="remove_all_routes">Remove all routes</string>
    <string name="all_tracks">All tracks</string>
    <string name="all_routes">All routes</string>
    <string name="remove_all_tracks_feedback">All tracks removed</string>
    <string name="gpslog_saved_to">gpslog saved to %1$s</string>
    <string name="gpslog_save_error">Error in gpslog save process</string>
    <string name="tracks">Tracks</string>
    <string name="routes">Routes</string>
    <string name="routes_only">Routes only</string>
    <string name="route_files">Route Files</string>
    <string name="route_file">Route File (gpx, kml, jpg)</string>
    <string name="import_title">Import</string>
    <string name="import_file">Import File</string>
    <string name="import_photo">Import Photo</string>
    <string name="import_thumbnails">Import Thumbnails</string>
    <string name="export_thumbnails">Export Thumbnails</string>
    <string name="import_geojson_maps">Import GeoJson Maps</string>
    <string name="mvt_drive_content">MVT maps on drive</string>
    <string name="raster_drive_content">Raster maps on drive</string>
    <string name="import_from_drive">Import from drive</string>
    <string name="import_from_drive_">Import from drive %1$s</string>
    <string name="download_from_drive">Download from drive</string>
    <string name="routefolder_name">Routefolder Name</string>
    <string name="remove">Remove</string>
    <string name="route_list">Routes</string>
    <string name="file_types">File Types</string>
    <string name="file_name">File Name</string>
    <string name="view_on_map">View on Map</string>
    <string name="file_imported_successfully">file import successful</string>
    <string name="file_imported_successfully_">%1$s File import successful</string>
    <string name="file_imported_failed">file import failed</string>
    <string name="select">Select</string>
    <string name="select_file">Select File</string>
    <string name="select_map">Select Map</string>
    <string name="save_to_database_ready">Save to database ready %1$s</string>
    <string name="remove_route_folder">Remove route folder %1$s</string>
    <string name="remove_region_">Remove region %1$s</string>
    <string name="refresh_route_preview_ready">refresh route preview ready %1$s</string>
    <string name="refresh_route_preview_error">refresh route preview error %1$s</string>
    <string name="early_annotations">Early Annotations</string>
    <string name="route_file_created_">route file created %1$s</string>
    <string name="file_not_found">File not found: %1$s</string>
    <string name="regions_">Regions</string>
    <string name="name_filter">Name Filter</string>
    <string name="route_name">Route Name</string>
    <string name="route_name_filter">Route name filter</string>
    <string name="map">Map</string>
    <string name="elevation_chart">Elevation Chart</string>
    <string name="elevation_refresh">Elevation SRTM refresh</string>
    <string name="elevation">Elevation</string>
    <string name="elevation_short">H</string>
    <string name="speed_short">V</string>
    <string name="directions_short">B</string>
    <string name="refresh_route_preview">Refresh Route Snapshot</string>
    <string name="remove_locations_to_time_">Remove locations BEFORE time %1$s</string>
    <string name="remove_locations_from_time_">Remove locations AFTER time %1$s</string>
    <string name="speed_with_unit">Speed [KmH]</string>
    <string name="altitude_with_unit">Altitude [m]</string>
    <string name="save_route">Save Route</string>
    <string name="save_as_route">Save as Route</string>
    <string name="delete_file">Delete File</string>
    <string name="deleted_file_">File %1$s deleted: %2$s</string>
    <string name="deleted_files_">Files deleted: %1$d</string>
    <string name="changed_files_">Files deleted: %1$d Files renamed: %2$d</string>
    <string name="share_file">Share File</string>
    <string name="share">Share</string>
    <string name="share_route_snapshot">Share Route Snapshot</string>
    <string name="move_file">Move File</string>
    <string name="save_to_database">Save into Database</string>
    <string name="locations">Locations</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="use_stepcounter">Use stepcounter</string>
    <string name="maptiler_api_key">ygIUMszmTtF3pMvQt0Bu</string>
    <string name="use_raster_map">Activate</string>
    <string name="after_restart">Change takes effect after restart</string>
    <string name="after_restart_no_rastermaps">Change takes effect after restart, Raster maps will not be used</string>
    <string name="use_cycleway_overlays">Activate</string>
    <string name="location_coords_format">lat: %1$.4f° lon: %2$.4f°</string>
    <string name="use_geojson_maps">Activate</string>
    <string name="use_mvt">Use Mvt</string>
    <string name="enable">Enable</string>
    <string name="askfor_app_restart">App restart?</string>
    <string name="restart_required">App restart may be necessary</string>
    <string name="restart_is_required">App restart or map refresh is necessary</string>
    <string name="rastermaps">Raster Maps</string>
    <string name="cycleway_overlays">Cycleway Overlays</string>
    <string name="cycleway_overlays_mbtiles">Cycleway Overlays (MbTiles)</string>
    <string name="mvt_databases">Mvt Databases</string>
    <string name="cycleways">Cycleways</string>
    <string name="export_title">Export</string>
    <string name="export_started">Export started …</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_question">Are you sure?</string>
    <string name="delete_confirmation_question">Delete %1$s, are you sure?</string>
    <string name="route_database">Route Database</string>
    <string name="by_dist">by distance</string>
    <string name="by_name">by name</string>
    <string name="by_region">by region</string>
    <string name="by_category">by category</string>
    <string name="sort_by_dist">\u039E by distance</string>
    <string name="sort_by_name">\u039E by name</string>
    <string name="sort_by_category">\u039E by category</string>
    <string name="sort_by_region">\u039E by region</string>
    <string name="delete_route">Delete Route</string>
    <string name="no_relevant_chart_data">No relevant data for the chart</string>
    <string name="route_tolerance_exceeded">Route deviation more than %1$dm</string>
    <string name="database">Database</string>
    <string name="files">Files</string>
    <string name="turn_left">Turn left</string>
    <string name="turn_right">Turn right</string>
    <string name="turn_sharp_left">Turn sharp left</string>
    <string name="turn_sharp_right">Turn sharp right</string>
    <string name="turn_slight_left">Turn slight left</string>
    <string name="turn_slight_right">Turn slight right</string>
    <string name="continue_on_street">Continue on street</string>
    <string name="continue_anyway">Continue</string>
    <string name="reached_via">Reached via</string>
    <string name="navigation_end">Navigation end</string>
    <string name="to_destination">To destination</string>
    <string name="turn">turn</string>
    <string name="deviation">Deviation</string>
    <string name="create_chart">Create Chart</string>
    <string name="polygon_removed">Polygon has been removed</string>
    <string name="polygon_reversed">Polygon has been reversed</string>
    <string name="no_stop_marker">Missing stop marker</string>
    <string name="stop_marker_set">Stop marker has been set</string>
    <string name="stop_marker_set_">Stop marker has been set %1$s</string>
    <string name="stop_marker">Stop marker</string>
    <string name="remove_stop_marker">Remove stop</string>
    <string name="start_marker">Start marker</string>
    <string name="no_locations">No Locations</string>
    <string name="elevation_with_unit">Elevation with unit</string>
    <string name="speed">Speed</string>
    <string name="uc_close">\u2716</string>
    <string name="uc_square">\u25a1</string>
    <string name="features_sorted_by">Features sorted by:</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="distance">Distance</string>
    <string name="distance_">Distance %1$s</string>
    <string name="map_features">Map Features</string>
    <string name="add_placemark">Add Placemark</string>
    <string name="placemark">Placemark</string>
    <string name="placemark_name">Placemark name</string>
    <string name="poi_database">Poi Database</string>
    <string name="active_symbols">Active Symbols</string>
    <string name="categories">Categories</string>
    <string name="initialization" translatable="false">Initialization …</string>
    <string name="gh_initialization" translatable="false">%1$s GraphHopper Initialization …</string>
    <string name="gh_not_initialzed" translatable="false">GraphHopper is not initialized</string>
    <string name="gh_error" translatable="false">GraphHopper Error: Call load or importOrLoad before routing</string>
    <string name="title_OfflineMapboxTileCountLimit">Maximum number of tiles allowed to be downloaded</string>
    <string name="title_tilemaker_maxzoom">Maximum zoom level</string>
    <string name="title_tilemaker_minzoom">Minimum zoom level</string>
    <string name="summary_OfflineMapboxTileCountLimit">Sets the maximum number of Maplibre-hosted tiles that may be downloaded and stored on the current device.</string>
    <string name="pref_OfflineMapboxTileCountLimit">OfflineMapboxTileCountLimit</string>
    <string name="pref_tilemaker_maxzoom">tilemaker_maxzoom</string>
    <string name="pref_tilemaker_minzoom">tilemaker_minzoom</string>
    <string name="pref_tilemaker_url">tilemaker_url</string>
    <string name="summary_tilemaker_maxzoom">Sets the maximum zoom level when raster maps are created</string>
    <string name="summary_tilemaker_minzoom">Sets the minimum zoom level when raster maps are created</string>
    <string name="gps">Gps</string>
    <string name="pref_gps_altitude_correction_reset_key">key_reset_gps_altitude_correction</string>
    <string name="pref_gps_altitude_correction_key">key_gps_altitude_correction</string>
    <string name="altitude_conversion">Convert between mean sea level and WGS84 altitude</string>
    <string name="gps_altitude_correction_">GPS Altitude Correction</string>
    <string name="gps_altitude_correction_reset">Reset GPS Altitude Correction</string>
    <string name="maplibre_offline_manager">MapLibre Offline Manager</string>
    <string name="maptype">Map Type</string>
    <string name="tilemaker_preferences">Raster maps Tilemaker</string>
    <string name="pref_render_mode">pref.render.mode</string>
</resources>